Fix Task_002_LogoBar - content align

--- a/src/components/layout/LogoBar/LogoBar.module.scss
+++ b/src/components/layout/LogoBar/LogoBar.module.scss
@@ -9,12 +9,12 @@
     .logo {
       flex: 25%;
       margin: auto;
-      margin-left: 50px;
+      text-align: center;
     }
 
     .banner {
       flex: 1;
-      margin-right: 50px;
+      margin: 0 50px 0 20px;
     }
   }
 }
